--- a/src/PhotoMessage/PhotoMessage.css
+++ b/src/PhotoMessage/PhotoMessage.css
@@ -31,8 +31,8 @@
 }
 
 .rce-mbox-photo--img img {
-    height: 100%;
-    min-height: 100px;
+    width: 100%;
+    height: auto;
     user-select: none;
 }
 
